cabal-version: 2.2

name:
  kafka
version:
  0.1.0.0
synopsis:
  kafka bindings
-- description:
homepage:
  https://github.com/chessai/kafka
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
-- copyright:
category:
  Database
build-type:
  Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type: git
  location: git://github.com/chessai/kafka.git

library
  exposed-modules:
    Kafka.Types
  other-modules:
    Kafka.Internal.RdKafka
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  extra-libraries:
    rdkafka
  build-depends:
      base         >= 4.7.0.0  && < 4.13
    , bifunctors   >= 5.5.0.0  && < 5.6.0.0
    , bytestring   >= 0.10.0.0 && < 0.11.0.0
    , containers   >= 0.5.9.0  && < 0.7.0.0
    , text         >= 1.2.0.0  && < 1.3.0.0
    , transformers >= 0.5.0.0  && < 0.6.0.0
    , unix         >= 2.7.0.0  && < 2.8.0.0
  if impl(ghc < 8.0)
    build-depends:
      semigroups
  default-language:
    Haskell2010
  build-tools:
    c2hs
  if os(osx)
    cpp-options: -D__attribute__(A)= -D_Nullable= -DNonnull=

